feat(frontend): fixed set group name endpoint
